(http://docutils.sourceforge.net/docs/user/rst/quickstart.html).
The changelog style is adapted from Apache Lucene.

Note that ``RB_ID=#`` correspond to associated messages in commits.

Next Version

Changes in Runtime Behavior:

  * util-collection: LruMap is now backed by jdk LinkedHashMap instead of apache
    collections LRUMap. ``RB_ID=833515``

New Features:

  * util-core: Add `c.t.concurrent.Scheduler.blockingTimeNanos` which tracks time spent doing
    blocking operations. ``RB_ID=828289``

  * util-core: Reduced allocations by 40% and latency by 18% of satisfying `Promises`.
    ``RB_ID=832816``

  * util-app: `com.twitter.finagle.util.LoadService` has been moved to
    `c.t.app.LoadService` and can now be used without needing a finagle-core
    dependency. ``RB_ID=829897``

  * util-cache: Adds support for Caffeine-style caches. ``RB_ID=833848``

API Changes:

  * util-core: `c.t.u.Bijection` is removed. use `c.t.bijection.Bijection`
    (https://github.com/twitter/bijection) instead. ``RB_ID=834383``

  * Builds are now only for Java 8 and Scala 2.11. See the
    `blog post <https://finagle.github.io/blog/2016/04/20/scala-210-and-java7/>`_
    for details. ``RB_ID=828898``

   * util-core: Deprecated method `Future.get` has been removed because it made it
     too easy to hide blocking code. Replaced usage with the more explicit
     `com.twitter.util.Await.result(Future)`. ``RB_ID=833579``

6.34.0  2016-04-26

New Features:

  * util-core: Add `Throwables.unchecked` to help Java users deal with checked
    exceptions. ``RB_ID=811441``

  * util-stats: Can now get from a `com.twitter.finagle.stats.StatsReceiver`` to all "leaf"
    StatsReceivers that don't delegate to another StatsReceiver with
    `com.twitter.finagle.stats.DelegatingStatsReceiver.all`.  ``RB_ID=819519``

API Changes:

  * util-core: Removed deprecated methods from Buf.scala ``RB_ID=809948``
    - Removed `c.t.io.Buf.ByteArray.apply`, replace usage with `Buf.ByteArray.Owned.apply`.